--- a/readme.me
+++ b/readme.me
@@ -1,2 +1,32 @@
 Dieses Repository enthält meine Homeassitant Automatisierung für PV-Optimiertes Laden von Elektroautos.
 Bei mir mittels Solaredge (modbus tcp integration über HACS) und eine wallbox mit rest api umgesetzt, aber vieles andere ist auch möglich :)
+
+
+da ich die helfer nicht als yaml finden konnte:
+input_select:
+  smartwb1_mode:
+    name: "WB1 Modus"
+    options:
+      - "Solar"
+      - "Immer Frei"
+      - "Deaktiviert"
+      - "Normal"
+    initial: "Solar"
+    icon: mdi:ev-station
+input_number:
+  smartwb1_current:
+    name: "WB1 Verfügbarer Überschussstrom"
+    initial: 16
+    min: 6
+    max: 16
+    step: 1
+    unit: A
+    icon: mdi:current-dc
+  evse_vorrang_stromstarke:
+    name: "WB1 Vorrang Stromstärke"
+    initial: 16
+    min: 6
+    max: 16
+    step: 1
+    unit: A
+    icon: icon: mdi:current-dc
